photos: module-info.java