@@ -138,6 +138,12 @@
 
             <dependency>
                 <groupId>exifweb</groupId>
+                <artifactId>photos</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
                 <artifactId>util</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -166,12 +172,6 @@
                 <version>${project.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>exifweb</groupId>
-                <artifactId>photos</artifactId>
-                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -853,7 +853,6 @@
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                            <arg>-J--add-opens=org.hibernate.orm.core/org.hibernate.internal=ALL-UNNAMED</arg>
                             <arg>-sourcepath</arg>
                             <arg>
                                 ${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/
